Edit description link no longer overlaps long descriptions

--- a/troposphere/static/css/projects.css
+++ b/troposphere/static/css/projects.css
@@ -24,6 +24,7 @@
     position: absolute;
     top: 5px;
     right: 5px;
+    float: right;
     padding: 0px 8px 1px 8px;
     font-weight: bold;
     font-size: 21px;
@@ -35,9 +36,7 @@
 }
 
 .project-description a {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+    float: right;
 }
 
 .project-items {
